infrastructure/apps/notification-service/service.yaml
apiVersion: v1
kind: Service

metadata:
  name: notification-service
  namespace: mrun-apps
  annotations:
    consul.hashicorp.com/service-name: notification-service
    consul.hashicorp.com/service-port: "3004"

spec:
  selector:
    app.kubernetes.io/name: notification-service
  ports:
    - name: http
      port: 3004
      targetPort: 3004
  type: ClusterIP
